corrected misspellings and changed font size for better display on mobile devices

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ nav, button {
 .subSectionHead{
 	text-align: left;
 	text-decoration: underline;
-	font: 30px 'Libre Baskerville';
+	font: 25px 'Libre Baskerville';
 	color: black;
 	
 }
